2013-02-22  Niibe Yutaka  <gniibe@fsij.org>

	* src/openpgp-do.c (GPG_DO_DISCRETIONARY, cmp_discretionary): New.
	(cmp_app_data): Change to factor out GPG_DO_DISCRETIONARY.
	(gpg_do_table): Add GPG_DO_DISCRETIONARY.

2013-02-21  Niibe Yutaka  <gniibe@fsij.org>

	* src/gnuk.ld.in (MEMORY): Fix adding FLASH_SIZE unit.

	* src/call-ec_p256.c (ecdsa_sign): Fix secret key access.

2013-02-20  Niibe Yutaka  <gniibe@fsij.org>

	* src/openpgp.c (cmd_internal_authenticate): Support ECDSA for
	authentication.

	* src/openpgp-do.c (algorithm_attr_ecdsa): New.
	(algorithm_attr_rsa): Rename (was: algorithm_attr).
	(gpg_do_table): Change for GPG_DO_ALG_AUT.
	(gpg_do_write_prvkey): Support ECDSA key for authentication.
	(proc_key_import): Likewise.
	(gpg_do_public_key): Likewise.

	* src/call-ec_p256.c: New.
	* src/Makefile.in: Add call-ec_p256.c.
	* src/call-rsa.c (modulus_free): Remove.

2013-02-19  Niibe Yutaka  <gniibe@fsij.org>

	* regnual/regnual.ld (MEMORY): Fix address of regnual.

	* regnual/Makefile (MCFLAGS): Remove -mfix-cortex-m3-ldrd.
	(CFLAGS): Add output to .lst.
	* src/Makefile.in (MCFLAGS): Remove.

	* src/sha256.c: Update from NeuG 0.05.

	* ChibiOS_2.0.8: Remove.

2013-02-18  Niibe Yutaka  <gniibe@fsij.org>

	Changes for new ChibiOS/RT.
	* src/main.c: Include adc.h.
	(main): Call halInit, adc_init, and chSysInit (change for
	ChibiOS/RT 2.4.x).
	* src/random.h: New.
	* src/ac.c, src/bn.c, src/call-rsa.c, src/main.c: Include random.h.
	* src/openpgp.c, src/openpgp-do.c: Likewise.
	* src/configure, src/gnuk.ld.in: Add MEMORY_SIZE.
	* src/ec_p256.c: Fix call of bn256_add_uint.
	* boards/STM8S_DISCOVERY/*: Update for ChibiOS/RT 2.4.x.
	* boards/CQ_STARM/*: Likewise.
	* boards/FST_01_00/*: Likewise.
	* boards/OLIMEX_STM32_H103/*: Likewise.
	* boards/STBEE/*: Likewise.
	* boards/STBEE_MINI/*: Likewise.
	* boards/STM32_PRIMER2/*: Likewise.

	Merge ec_p256 branch.
	* src/Makefile.in: Add ECC files.
	* src/bn.h, src/bn.c: New.
	* src/jpc-ac.h, src/jpc.c: New.